# tiny-ed448-goldilocks

./: Cargo.toml  README.md
benches/: benchmark_e448_512.rs
src/: lib.rs
src/curve/: affine.rs  extended_edwards.rs  projective_niels.rs
src/curve/field/: field_element.rs  field_element_serde.rs  lookup_table.rs  scalar.rs
tests/: e448_tests.rs  ops_tests.rs
