[package]
name = "tiny_ed448_goldilocks"
version = "0.1.7"
edition = "2021"

license = "MIT"
keywords = ["ed448-goldilocks", "elliptic-curve", "ed448", "schnorr"]
readme = "README.md"
authors = ["Dustin Ray (Dr. Capybara) <dustinray313@gmail.com>"]
description = "A lean, high performance, pure rust implementation of Ed448-Goldilocks for easy signatures and key exchange."
repository = "https://github.com/drcapybara/tiny_ed448_goldilocks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
crypto-bigint = {version = "0.5.3", features = ["serde"] }
fiat-crypto = "0.2.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.test] 
opt-level = 3
